{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 78,
  "lineage": "c6f2105a-0cfe-8601-be0a-c6e20dda344c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0003c333f936719ea",
            "arn": "arn:aws:ec2:ap-southeast-7:176893791823:elastic-ip/eipalloc-0003c333f936719ea",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0792a24e8104ab84f",
            "domain": "vpc",
            "id": "eipalloc-0003c333f936719ea",
            "network_border_group": "ap-southeast-7",
            "network_interface": "eni-0e7c165991eba5847",
            "private_dns": "ip-10-0-1-50.ap-southeast-7.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-43-209-45-26.ap-southeast-7.compute.amazonaws.com",
            "public_ip": "43.209.45.26",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-069f8ce17905592f0",
            "arn": "arn:aws:ec2:ap-southeast-7:176893791823:instance/i-0cd78581de6720ee7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-7a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cd78581de6720ee7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0e7c165991eba5847"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": false,
                "network_interface_id": "eni-0e7c165991eba5847"
              }
            ],
            "primary_network_interface_id": "eni-0e7c165991eba5847",
            "private_dns": "ip-10-0-1-50.ap-southeast-7.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_ip": "43.209.45.26",
            "region": "ap-southeast-7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03ab6051cf92dbd6b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0999b122151a30a92",
            "tags": {
              "Name": "web-server"
            },
            "tags_all": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b49a2cb5840ffa39"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "176893791823",
            "id": "i-0cd78581de6720ee7",
            "region": "ap-southeast-7"
          },
          "dependencies": [
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-7:176893791823:internet-gateway/igw-0ab467b0716d5d6f5",
            "id": "igw-0ab467b0716d5d6f5",
            "owner_id": "176893791823",
            "region": "ap-southeast-7",
            "vpc_id": "vpc-0b221c0f40004b2db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-7:176893791823:network-interface/eni-0e7c165991eba5847",
            "id": "eni-0e7c165991eba5847",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:39:6a:4f:1a:8c",
            "owner_id": "176893791823",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "region": "ap-southeast-7",
            "security_groups": [
              "sg-0b49a2cb5840ffa39"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0999b122151a30a92"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-7:176893791823:route-table/rtb-04954849ebf506ae6",
            "id": "rtb-04954849ebf506ae6",
            "owner_id": "176893791823",
            "propagating_vgws": [],
            "region": "ap-southeast-7",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ab467b0716d5d6f5",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ab467b0716d5d6f5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-route"
            },
            "tags_all": {
              "Name": "prod-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b221c0f40004b2db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "176893791823",
            "id": "rtb-04954849ebf506ae6",
            "region": "ap-southeast-7"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014eedfcc12228d22",
            "region": "ap-southeast-7",
            "route_table_id": "rtb-04954849ebf506ae6",
            "subnet_id": "subnet-0999b122151a30a92"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.route-table",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-7:176893791823:security-group/sg-0b49a2cb5840ffa39",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b49a2cb5840ffa39",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web",
            "name_prefix": "",
            "owner_id": "176893791823",
            "region": "ap-southeast-7",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b221c0f40004b2db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "176893791823",
            "id": "sg-0b49a2cb5840ffa39",
            "region": "ap-southeast-7"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-7:176893791823:subnet/subnet-0999b122151a30a92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-7a",
            "availability_zone_id": "apse7-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0999b122151a30a92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "176893791823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-7",
            "tags": {
              "Name": "prod-subnet"
            },
            "tags_all": {
              "Name": "prod-subnet"
            },
            "vpc_id": "vpc-0b221c0f40004b2db"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "176893791823",
            "id": "subnet-0999b122151a30a92",
            "region": "ap-southeast-7"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-7:176893791823:vpc/vpc-0b221c0f40004b2db",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-001fdb5c289992745",
            "default_route_table_id": "rtb-05a43f81f8298ed5a",
            "default_security_group_id": "sg-0e8d99c97b3d19761",
            "dhcp_options_id": "dopt-0392bc780c3059b56",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b221c0f40004b2db",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05a43f81f8298ed5a",
            "owner_id": "176893791823",
            "region": "ap-southeast-7",
            "tags": {
              "Name": "production"
            },
            "tags_all": {
              "Name": "production"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "176893791823",
            "id": "vpc-0b221c0f40004b2db",
            "region": "ap-southeast-7"
          }
        }
      ]
    }
  ]
}